Fixed Layout Bugs

--- a/SolypManagementDashboard/SolypManagementDashboard/pages/lineChart/linceChart.css
+++ b/SolypManagementDashboard/SolypManagementDashboard/pages/lineChart/linceChart.css
@@ -1,6 +1,6 @@
 ﻿/* add all CSS changes specifically concerning the new subpage here*/
 
-.contentwrapper {
+.line_contentwrapper {
     margin: 50px; /* TODO needs defined makeover that every page looks the same!*/
 }
 
