--- a/SolypManagementDashboard/SolypManagementDashboard/pages/treemap/treemap.css
+++ b/SolypManagementDashboard/SolypManagementDashboard/pages/treemap/treemap.css
@@ -1,6 +1,6 @@
 ﻿/* add all CSS changes specifically concerning the new subpage here*/
 
-.contentwrapper {
+.treemap_contentwrapper {
     margin: 50px;
 }
 
